--- a/MainForm.resx
+++ b/MainForm.resx
@@ -118,29 +118,29 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="richTextBox1.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="rtb_commands.Location" type="System.Drawing.Point, System.Drawing">
     <value>465, 28</value>
   </data>
-  <data name="richTextBox1.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="rtb_commands.Size" type="System.Drawing.Size, System.Drawing">
     <value>772, 399</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="richTextBox1.TabIndex" type="System.Int32, mscorlib">
+  <data name="rtb_commands.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
-  <data name="richTextBox1.Text" xml:space="preserve">
+  <data name="rtb_commands.Text" xml:space="preserve">
     <value />
   </data>
-  <data name="&gt;&gt;richTextBox1.Name" xml:space="preserve">
-    <value>richTextBox1</value>
+  <data name="&gt;&gt;rtb_commands.Name" xml:space="preserve">
+    <value>rtb_commands</value>
   </data>
-  <data name="&gt;&gt;richTextBox1.Type" xml:space="preserve">
+  <data name="&gt;&gt;rtb_commands.Type" xml:space="preserve">
     <value>System.Windows.Forms.RichTextBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;richTextBox1.Parent" xml:space="preserve">
+  <data name="&gt;&gt;rtb_commands.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;richTextBox1.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;rtb_commands.ZOrder" xml:space="preserve">
     <value>19</value>
   </data>
   <data name="la_user.AutoSize" type="System.Boolean, mscorlib">
@@ -390,13 +390,13 @@
     <value>12, 130</value>
   </data>
   <data name="la_directories.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 15</value>
+    <value>82, 15</value>
   </data>
   <data name="la_directories.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
   </data>
   <data name="la_directories.Text" xml:space="preserve">
-    <value>Directories</value>
+    <value>Subdirectories</value>
   </data>
   <data name="&gt;&gt;la_directories.Name" xml:space="preserve">
     <value>la_directories</value>
